--- a/index.html
+++ b/index.html
@@ -6,22 +6,21 @@
     <title>Приложение для заметок</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-    <link rel="icon" href="/favickon/notepad (3).png" type="image/x-icon"> <!-- Фавикон -->
+    <link rel="icon" href="/favickon/diary.png" type="image/x-icon"> <!-- Фавикон -->
 </head>
 <body>
     <div id="app">
         <header>
             <nav>
-                <button class="create" id="create-note" title="Создать заметку"><i class="fas fa-plus"></i></button>
-                
-                <button class="load" id="load-notes" title="Загрузить заметки"><i class="fas fa-cloud-download-alt"></i></button>
-                <button class="save" id="save-notes" title="Сохранить заметки"><i class="fas fa-cloud-upload-alt"></i></button>
-                <button class="reply" id="undo" title="Отменить"><i class="fa-solid fa-reply"></i></button>
                 <button class="all" id="all-notes" title="Все заметки"><i class="fas fa-list"></i></button>
                 <button class="note-color_white" id="white-notes" title="Белые заметки"></button>
                 <button class="note-color_red" id="red-notes" title="Красные заметки"></button>
                 <button class="note-color_yellow" id="yellow-notes" title="Желтые заметки"></button>
                 <button class="note-color_green" id="green-notes" title="Зеленые заметки"></button>
+                <button class="load" id="load-notes" title="Загрузить заметки"><i class="fas fa-cloud-download-alt"></i></button>
+                <button class="save" id="save-notes" title="Сохранить заметки"><i class="fas fa-cloud-upload-alt"></i></button>
+                <button class="reply" id="undo" title="Отменить"><i class="fa-solid fa-reply"></i></button>
+                <button class="create" id="create-note" title="Создать заметку"><i class="fas fa-plus"></i></button>
                 <input type="text" id="note-search" placeholder="Поиск заметок" />
             </nav>
         </header>
