--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                 <div class="color-picker">
                     <label>Цвет:</label>
                     <select id="note-color">
-                        <option value="#ECECEC" selected>Белый</option>
-                        <option value="#F78888">Красный</option>
-                        <option value="#F3D250">Желтый</option>
-                        <option value="#88BDBC">Зеленый</option>
+                        <option value="rgb(236, 236, 236)">Белый</option>
+                        <option value="rgb(247, 136, 136)">Красный</option>
+                        <option value="rgb(243, 210, 80)">Желтый</option>
+                        <option value="rgb(136, 189, 188)">Зеленый</option>
                     </select>
                 </div>
                 <button class="save-btn" id="save-note">Сохранить</button>
