--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Приложение для заметок</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-    <link rel="icon" href="/favickon/diary.png" type="image/x-icon"> <!-- Фавикон -->
+    <link rel="icon" href="favickon/diary.png" type="image/x-icon"> <!-- Фавикон -->
 </head>
 <body>
     <div id="app">
