--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Приложение для заметок</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-    <link rel="icon" href="favickon/diary.png" type="image/x-icon"> <!-- Фавикон -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="icon" href="/favickon/diary.png" type="image/x-icon"> <!-- Фавикон -->
 </head>
 <body>
     <div id="app">
@@ -28,7 +29,7 @@
                 
                 <div class="nav-two">
                     <button class="load" id="load-notes" title="Загрузить заметки"><i class="fas fa-cloud-download-alt"></i></button>
-                    <button class="save" id="save-notes" title="Сохранить заметки"><i class="fas fa-cloud-upload-alt"></i></button>
+                    <button class="save" id="save-notes" title="Сохранить заметки"><i class="fa-regular fa-floppy-disk"></i></button>
                     <button class="reply" id="undo" title="Отменить"><i class="fa-solid fa-reply"></i></button>
                 </div>
                           
