--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
                 <div class="color-picker">
                     <label>Цвет:</label>
                     <select id="note-color">
-                        <option value="rgb(236, 236, 236)">Белый</option>
-                        <option value="rgb(247, 136, 136)">Красный</option>
-                        <option value="rgb(243, 210, 80)">Желтый</option>
-                        <option value="rgb(136, 189, 188)">Зеленый</option>
+                        <option value="rgba(236, 236, 236, 0.5)">Белый</option>
+                        <option value="rgba(247, 136, 136, 0.5)">Красный</option>
+                        <option value="rgba(243, 210, 80, 0.5)">Желтый</option>
+                        <option value="rgba(136, 189, 188, 0.5)">Зеленый</option>
                     </select>
                 </div>
                 <button class="save-btn" id="save-note">Сохранить</button>
