--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
                     <button class="note-color_yellow" id="yellow-notes" title="Желтые заметки"></button>
                     <button class="note-color_green" id="green-notes" title="Зеленые заметки"></button>
                 </div>
+
+                <div class="nav-four">
+                    <button class="note-today" id="today-note" title="неделя">Сегодня</button>
+                    <button class="note-week" id="week-note" title="неделя">Неделя</button>
+                    <button class="note-month" id="month-note" title="месяц">Месяц</button>
+                    <button class="note-quarter" id="quarter-note" title="три месяца">Три месяца</button>
+                    <button class="note-year" id="year-note" title="год">Год</button>
+                </div>
                 
                 <div class="nav-two">
                     <button class="load" id="load-notes" title="Загрузить заметки"><i class="fas fa-cloud-download-alt"></i></button>
@@ -81,6 +89,7 @@
                         <option value="rgba(136, 189, 188, 0.5)">Зеленый</option>
                     </select>
                 </div>
+                <input type="date" id="note-deadline" placeholder="Выберите дедлайн" />
                 <button class="save-btn" id="save-note">Сохранить</button>
                 <button class="close-btn" id="close-popup">Закрыть</button>
             </div>
